refactor: name -> username
